src/test/deca/extension/syntax/invalid/array_declaration_with_size.deca
// Can't put length in the declaration

{
    int[4] a ;
}